# screeps-arena-game-api

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: constants.rs  enums.rs  game.rs  lib.rs  objects.rs  traits.rs
src/constants/: extra.rs  numbers.rs  prototypes.rs  small_enums.rs  types.rs
src/game/: pathfinder.rs  utils.rs  visual.rs
src/objects/: impls.rs
src/objects/impls/: arena.rs  construction_site.rs  creep.rs  flag.rs  game_object.rs  owned_structure.rs  resource.rs  source.rs  store.rs  structure.rs  structure_container.rs  structure_extension.rs  structure_rampart.rs  structure_road.rs  structure_spawn.rs  structure_tower.rs  structure_wall.rs
src/objects/impls/arena/: area_effect.rs  basic.rs  body_part.rs  bonus_flag.rs  flag.rs  score_collector.rs
src/objects/impls/arena/advanced/: area_effect.rs  body_part.rs  flag.rs  score_collector.rs
src/objects/impls/arena/basic/: area_effect.rs  body_part.rs  score_collector.rs
