[package]
name = "screeps-arena-game-api"
version = "0.10.0"
authors = ["David Ross <daboross@daboross.net>"]
documentation = "https://docs.rs/screeps-arena-game-api/"
edition = "2021"
include = [
    "Cargo.toml",
    "Web.toml",
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustyscreeps/screeps-arena-game-api/"
description = "WASM bindings to the in-game Screeps Arena API"

[lib]
name = "screeps_arena"

[package.metadata.docs.rs]
all-features = true
# this workaround (and the cfg_attr wrapping around the doc(cfg()) calls) can go once the doc_cfg feature is stablized
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = "0.5"
enum_dispatch = "0.3"
enum-iterator = "0.6"
js-sys = "0.3"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
wasm-bindgen = { version = "0.2", features = [] }
serde-wasm-bindgen = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

enable-body-part = []
enable-flag = []
enable-area-effect = []
enable-score = []

arena-basic = []
arena-advanced = []

arena-capture-the-flag = ["enable-body-part", "enable-flag"]
arena-spawn-and-swamp = []
arena-collect-and-control = ["enable-area-effect", "enable-score"]


arena-capture-the-flag-basic = ["arena-capture-the-flag", "arena-basic"]
arena-capture-the-flag-advanced = ["arena-capture-the-flag", "arena-advanced"]
arena-spawn-and-swamp-basic = ["arena-spawn-and-swamp", "arena-basic"]
arena-spawn-and-swamp-advanced = ["arena-spawn-and-swamp", "arena-advanced"]
arena-collect-and-control-basic = ["arena-collect-and-control", "arena-basic"]
arena-collect-and-control-advanced = ["arena-collect-and-control", "arena-advanced"]
